[package]
name = "wherr"
version = "0.2.1"
edition = "2021"
authors = ["Joel Jakobsson <github@compiler.org>"]
categories = ["rust-patterns"]
description = "Enhance Rust errors with file and line details for clearer debugging."
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joelonsql/wherr"
