[package]
name = "wherr-macro"
version = "0.1.1"
edition = "2021"
authors = ["Joel Jakobsson <github@compiler.org>"]
categories = ["rust-patterns"]
description = "Enhance Rust error messages with file and line details using the `#[wherr]` macro for clearer debugging."
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joelonsql/wherr"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "visit-mut", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
