[package]
name = "wherr"
version = "0.1.1"
edition = "2021"
authors = ["Joel Jakobsson <github@compiler.org>"]
categories = ["rust-patterns"]
description = "Enhance Rust error messages with file and line details using the `#[wherr]` macro for clearer debugging."
keywords = ["error", "error-handling"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joelonsql/wherr"

[dependencies]
wherr-macro = "0.1"